fix(phase-12): harden notification routines