@@ -4,20 +4,30 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.neong.vixie.dto.NotificationEvent;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.redis.core.RedisTemplate;
+import org.springframework.data.redis.core.script.DefaultRedisScript;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 
 @Service
 @RequiredArgsConstructor
 public class NotificationDelayQueue {
 
     static final String QUEUE_KEY = "vixie:notification:queue";
+    private static final DefaultRedisScript<Object> POP_DUE_EVENT_SCRIPT = new DefaultRedisScript<>("""
+            local item = redis.call('ZRANGEBYSCORE', KEYS[1], '-inf', ARGV[1], 'LIMIT', 0, 1)
+            if #item == 0 then
+              return nil
+            end
+            redis.call('ZREM', KEYS[1], item[1])
+            return item[1]
+            """, Object.class);
 
     private final RedisTemplate<String, Object> redisTemplate;
-    private final ObjectMapper objectMapper = new ObjectMapper().findAndRegisterModules();
+    private final ObjectMapper objectMapper;
 
     public void enqueue(NotificationEvent event) {
         redisTemplate.opsForZSet().add(QUEUE_KEY, event, event.targetTimeEpoch());
@@ -25,15 +35,15 @@ public class NotificationDelayQueue {
 
     public List<NotificationEvent> pollDueEvents() {
         long now = Instant.now().getEpochSecond();
-        Set<Object> due = redisTemplate.opsForZSet().rangeByScore(QUEUE_KEY, 0, now);
-        if (due == null || due.isEmpty()) {
-            return List.of();
-        }
-
-        redisTemplate.opsForZSet().remove(QUEUE_KEY, due.toArray());
-        return due.stream()
-                .map(this::toEvent)
-                .toList();
+        List<NotificationEvent> events = new ArrayList<>();
+        Object due;
+        do {
+            due = redisTemplate.execute(POP_DUE_EVENT_SCRIPT, Collections.singletonList(QUEUE_KEY), now);
+            if (due != null) {
+                events.add(toEvent(due));
+            }
+        } while (due != null);
+        return events;
     }
 
     private NotificationEvent toEvent(Object object) {
